# qaguru_3_homework

./: .flake8  README.md  codestyle.py  pyproject.toml  requirements.txt
test/: test_example.py  test_web_driver.py  test_webdriver.py
